--- a/src/theme/globals.variables.scss
+++ b/src/theme/globals.variables.scss
@@ -13,7 +13,7 @@ $gray-500:    #1a1b1c !default; // Stroke on inputs
 $gray-600:    #606060 !default;
 $gray-700:    #454545 !default;
 $gray-800:    #313131 !default;
-$gray-900:    #18191a !default; // Copy text
+$gray-900:    #0a0a0a !default; // Copy text
 $black:       #000000 !default; // Avoid usage
 
 $blue:        #0f6cbf !default;
