--- a/src/core/features/login/components/sites/sites.html
+++ b/src/core/features/login/components/sites/sites.html
@@ -64,12 +64,12 @@
 
         </ion-list>
     </core-loading>
-    <ion-fab slot="fixed" core-fab vertical="bottom" horizontal="end">
+	<!-- <ion-fab slot="fixed" core-fab vertical="bottom" horizontal="end">
         <ion-fab-button (click)="add($event)" [attr.aria-label]="'core.login.add' | translate">
             <ion-icon name="fas-plus" aria-hidden="true"></ion-icon>
             <span class="sr-only">{{ 'core.login.add' | translate }}</span>
         </ion-fab-button>
-    </ion-fab>
+    </ion-fab> -->
 </ion-content>
 
 <!-- Template to render a list of sites. -->
